add section and footer

--- a/index.html
+++ b/index.html
@@ -62,7 +62,30 @@
     <h2>@header</h2>
     <header>
         <img src="images/undraw_web_development_w2vv.svg" height="200" width="200">
+        <h3>heading inside header</h3>
     </header>
+    <hr>
+
+    <h2>@section</h2>
+    <section>
+        <h1>white background</h1>
+        <p>This will have white background</p>
+    </section>
+    <section>
+        <h1>off white background</h1>
+        <p>This will have gray background</p>
+    </section>
+    <hr>
+
+    <h2>@footer</h2>
+    <footer>
+        <div>heading inside footer</div>
+        <ul>
+            <li>one</li>
+            <li>two</li>
+            <li>three</li>
+        </ul>
+    </footer>
     <hr>
 
     
