--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -18,30 +19,32 @@
 
     <h2>@container</h2>
     <h3>fluid container</h3>
-    <div>This is a fluid container</div>
+    <div class="container">This is a fluid container</div>
     <h3>center container</h3>
-    <div>This is a center container</div>
+    <div class="container container-center">This is a center container</div>
     <hr>
 
     <h2>@links</h2>
-    <a href="https://google.com">Google</a>
+    <a class="link link-primary" href="https://google.com">Primary Link</a>
+    <a class="link link-secondary" href="https://google.com">Secondary Link</a>
     <hr>
 
     <h2>@lists</h2>
     <h3>unordered list</h3>
-    <ul>
+    <p>This list will not have the bullet</p>
+    <ul class="list-non-bullet">
         <li>one</li>
         <li>two</li>
         <li>three</li>
     </ul>
     <h3>unordered inline list</h3>
-    <ul>
-        <li>one</li>
-        <li>two</li>
-        <li>three</li>
+    <ul class="list-non-bullet">
+        <li class="list-item-inline">one</li>
+        <li class="list-item-inline">two</li>
+        <li class="list-item-inline">three</li>
     </ul>
     <h3>reverse ordered list</h3>
-    <ol>
+    <ol reversed>
         <li>one</li>
         <li>two</li>
         <li>three</li>
@@ -49,41 +52,45 @@
     <hr>
 
     <h2>@nav</h2>
-    <nav>
-        <div>brandName</div>
-        <ul>
-            <li><a href="/">home</a></li>
-            <li><a href="/">product</a></li>
-            <li><a href="/">about</a></li>
+    <nav class="navigation container">
+        <div class="nav-brand">brandName</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline"><a class="link link-active" href="/">home</a></li>
+            <li class="list-item-inline"><a class="link" href="/">product</a></li>
+            <li class="list-item-inline"><a class="link" href="/">about</a></li>
         </ul>
     </nav>
     <hr>
 
     <h2>@header</h2>
-    <header>
-        <img src="images/undraw_web_development_w2vv.svg" height="200" width="200">
-        <h3>heading inside header</h3>
+    <header class="girl">
+        <img class="girl-img" src="images/undraw_voice_interface_eckp.svg">
+        <h1 class="girl-heading">Unnati Shah the <span class="heading-inverter">web developer</span></h3>
     </header>
     <hr>
 
     <h2>@section</h2>
-    <section>
-        <h1>white background</h1>
-        <p>This will have white background</p>
+    <section class="section">
+        <div class="container container-center">
+            <h1>white background</h1>
+            <p>This will have white background</p>
+        </div>
     </section>
-    <section>
-        <h1>off white background</h1>
-        <p>This will have gray background</p>
+    <section class="section ow">
+        <div class="container container-center">
+            <h1>off white background</h1>
+            <p>This will have gray background</p>
+        </div>
     </section>
     <hr>
 
     <h2>@footer</h2>
-    <footer>
-        <div>heading inside footer</div>
-        <ul>
-            <li>one</li>
-            <li>two</li>
-            <li>three</li>
+    <footer class="footer">
+        <div class="footer-heading">heading inside footer</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline"><a class="link" href="/">socialone</a></li>
+            <li class="list-item-inline"><a class="link" href="/">socialtwo</a></li>
+            <li class="list-item-inline"><a class="link" href="/">socialthree</a></li>
         </ul>
     </footer>
     <hr>
