--- a/blogs.html
+++ b/blogs.html
@@ -21,5 +21,14 @@
         <h1 class="girl-heading">My <span class="heading-inverter">Blogs</span></h3>
     </header>
 
+    <footer class="footer">
+        <div class="footer-heading">Connect with me</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline"><a class="link" href="https://github.com/UnnatiShah07">Github</a></li>
+            <li class="list-item-inline"><a class="link" href="https://instagram.com/unnati0701">Instagram</a></li>
+        </ul>
+    </footer>
+    
+
 </body>
 </html>
