--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="container container-center">
             <h1>Projects</h1>
             <p>I like showcase my work and thus, you can see my projects hosted online</p>
-            <a class="link link-primary" href="https://google.com">Projects</a>
+            <a class="link link-primary" href="projects.html">Projects</a>
         </div>
     </section>
     
@@ -41,7 +41,7 @@
         <div class="container container-center">
             <h1>Blogs</h1>
             <p>I am also working some technical and non-technical blogs. I like to document my journey of learning</p>
-            <a class="link link-primary" href="https://google.com">Blogs</a>
+            <a class="link link-primary" href="blogs.html">Blogs</a>
         </div>
     </section>
 
