--- a/projects.html
+++ b/projects.html
@@ -24,15 +24,6 @@
     <ul class="list-non-bullet">
         <li>
             <div class="container container-center">
-                <h1>How well you know me?</h1>
-                <small>Decemeber,2020</small>
-                <p>A CLI app built with <b>nodeJS</b>. You can send this to your friends and find out who really knows you.</p>
-                <a class="link link-primary" href="https://repl.it/@UnnatiShah07/friend-quiz">Run Project</a>
-                <a class="link link-secondary" href="https://github.com/UnnatiShah07/friend-quiz">Source code</a>
-            </div>            
-        </li><br>
-        <li>
-            <div class="container container-center">
                 <h1>Quiz about NodeJS</h1>
                 <small>Decemeber,2020</small>
                 <p>A CLI app built with <b>nodeJS</b>. You can send this to your friends and find out who really knows you.</p>
@@ -40,7 +31,25 @@
                 <a class="link link-secondary" href="https://github.com/UnnatiShah07/nodejs-quiz">Source code</a>
             </div>            
         </li><br>
-    </ol>
+        <li>
+            <div class="container container-center">
+                <h1>How well you know me?</h1>
+                <small>Decemeber,2020</small>
+                <p>A CLI app built with <b>nodeJS</b>. You can send this to your friends and find out who really knows you.</p>
+                <a class="link link-primary" href="https://repl.it/@UnnatiShah07/friend-quiz">Run Project</a>
+                <a class="link link-secondary" href="https://github.com/UnnatiShah07/friend-quiz">Source code</a>
+            </div>            
+        </li><br>
+    </ul>
+
+    <footer class="footer">
+        <div class="footer-heading">Connect with me</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline"><a class="link" href="https://github.com/UnnatiShah07">Github</a></li>
+            <li class="list-item-inline"><a class="link" href="https://instagram.com/unnati0701">Instagram</a></li>
+        </ul>
+    </footer>
+    
 
 </body>
 </html>
