--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Unnati Shah</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 </head>
 <body>
 
@@ -48,8 +49,12 @@
     <footer class="footer">
         <div class="footer-heading">Connect with me</div>
         <ul class="social-links list-non-bullet">
-            <li class="list-item-inline"><a class="link" href="https://github.com/UnnatiShah07">Github</a></li>
-            <li class="list-item-inline"><a class="link" href="https://instagram.com/unnati0701">Instagram</a></li>
+            <li class="list-item-inline">
+                <a class="link icon" href="https://github.com/UnnatiShah07"><i class="fa fa-github" aria-hidden="true"></i></a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link icon" href="https://instagram.com/unnati0701"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            </li>
         </ul>
     </footer>
     
