Add new changes in intro, add dummy blogs

--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
     
     <header class="girl">
         <img class="girl-img" src="/images/undraw_voice_interface_eckp.svg">
-        <h1 class="girl-heading">Unnati Shah the <span class="heading-inverter">web developer</span></h3>
+        <h1 class="girl-heading">Unnati Shah the <span class="heading-inverter">Web Developer</span></h3>
     </header>
     
     <section class="section ow">
         <div class="container container-center">
             <h1>Technologies</h1>
-            <p>I am familiar with HTML, CSS, Java, PHP, Git, Web Hosting</p>
+            <p>I am familiar with HTML5, CSS, JavaScript, Basics of React and Redux, and also know Basics of React Native.</p>
         </div>
     </section>
 
     <section class="section">
         <div class="container container-center">
             <h1>Projects</h1>
-            <p>I like showcase my work and thus, you can see my projects hosted online</p>
+            <p>I like to showcase my work and so you can see my projects hosted online on Github.</p>
             <a class="link link-primary" href="projects.html">Projects</a>
         </div>
     </section>
@@ -41,7 +41,7 @@
     <section class="section ow">
         <div class="container container-center">
             <h1>Blogs</h1>
-            <p>I am also working some technical and non-technical blogs. I like to document my journey of learning</p>
+            <p>I am also working some technical and non-technical blogs. I like to document my journey of learning.</p>
             <a class="link link-primary" href="blogs.html">Blogs</a>
         </div>
     </section>
@@ -51,6 +51,12 @@
         <ul class="social-links list-non-bullet">
             <li class="list-item-inline">
                 <a class="link icon" href="https://github.com/UnnatiShah07"><i class="fa fa-github" aria-hidden="true"></i></a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link icon" href="/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link icon" href="/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             </li>
             <li class="list-item-inline">
                 <a class="link icon" href="https://instagram.com/unnati0701"><i class="fa fa-instagram" aria-hidden="true"></i></a>
