--- a/blogs.html
+++ b/blogs.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blogs | Unnati Shah</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 </head>
 <body>
 
@@ -21,11 +22,41 @@
         <h1 class="girl-heading">My <span class="heading-inverter">Blogs</span></h3>
     </header>
 
+    <ul class="list-non-bullet">
+        <li>
+            <div class="container container-center">
+                <h1>Dummy Blog Two</h1>
+                <small>17 Spetember, 2022</small>
+                <p style="margin-bottom: 25px;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                <a class="link link-secondary" href="/readBolg2.html">Read more</a>
+            </div>            
+        </li><br>
+        <li>
+            <div class="container container-center">
+                <h1>Dummy Blog One</h1>
+                <small>17 Spetember, 2022</small>
+                <p style="margin-bottom: 25px;">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+                <a class="link link-secondary" href="/readBlog1.html">Read more</a>
+            </div>         
+        </li><br>
+    </ul>
+
+
     <footer class="footer">
         <div class="footer-heading">Connect with me</div>
         <ul class="social-links list-non-bullet">
-            <li class="list-item-inline"><a class="link" href="https://github.com/UnnatiShah07">Github</a></li>
-            <li class="list-item-inline"><a class="link" href="https://instagram.com/unnati0701">Instagram</a></li>
+            <li class="list-item-inline">
+                <a class="link icon" href="https://github.com/UnnatiShah07"><i class="fa fa-github" aria-hidden="true"></i></a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link icon" href="/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link icon" href="/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link icon" href="https://instagram.com/unnati0701"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            </li>
         </ul>
     </footer>
     
