--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects | Unnati Shah</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 </head>
 <body>
     
@@ -24,20 +25,20 @@
     <ul class="list-non-bullet">
         <li>
             <div class="container container-center">
-                <h1>Quiz about NodeJS</h1>
-                <small>Decemeber,2020</small>
-                <p>A CLI app built with <b>nodeJS</b>. You can send this to your friends and find out who really knows you.</p>
-                <a class="link link-primary" href="https://repl.it/@UnnatiShah07/Nodejs-Quiz-App">Run Project</a>
-                <a class="link link-secondary" href="https://github.com/UnnatiShah07/nodejs-quiz">Source code</a>
+                <h1>Quiz about React JS</h1>
+                <small>11 Spetember, 2022</small>
+                <p style="margin-bottom: 25px;">A CLI app built with <b>nodeJS</b>. You can send this to your friends and find out who really knows react well.</p>
+                <a style="margin-right: 15px ;" class="link link-primary" href="https://replit.com/@UnnatiShah07/React-Js-Quiz-App">Run Project</a>
+                <a class="link link-secondary" href="https://github.com/UnnatiShah07/react-js-quiz-app">Source code</a>
             </div>            
         </li><br>
         <li>
             <div class="container container-center">
                 <h1>How well you know me?</h1>
-                <small>Decemeber,2020</small>
-                <p>A CLI app built with <b>nodeJS</b>. You can send this to your friends and find out who really knows you.</p>
-                <a class="link link-primary" href="https://repl.it/@UnnatiShah07/friend-quiz">Run Project</a>
-                <a class="link link-secondary" href="https://github.com/UnnatiShah07/friend-quiz">Source code</a>
+                <small>11 Spetember, 2022</small>
+                <p style="margin-bottom: 25px;">A CLI app built with <b>nodeJS</b>. You can send this to your friends and find out who really knows you.</p>
+                <a style="margin-right: 15px ;" class="link link-primary" href="https://replit.com/@UnnatiShah07/Friend-Quiz-App">Run Project</a>
+                <a class="link link-secondary" href="https://github.com/UnnatiShah07/friend-quiz-app">Source code</a>
             </div>            
         </li><br>
     </ul>
@@ -45,8 +46,18 @@
     <footer class="footer">
         <div class="footer-heading">Connect with me</div>
         <ul class="social-links list-non-bullet">
-            <li class="list-item-inline"><a class="link" href="https://github.com/UnnatiShah07">Github</a></li>
-            <li class="list-item-inline"><a class="link" href="https://instagram.com/unnati0701">Instagram</a></li>
+            <li class="list-item-inline">
+                <a class="link icon" href="https://github.com/UnnatiShah07"><i class="fa fa-github" aria-hidden="true"></i></a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link icon" href="/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link icon" href="/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link icon" href="https://instagram.com/unnati0701"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            </li>
         </ul>
     </footer>
     
