Add header and footer in blog pages and change some style

--- a/projects.html
+++ b/projects.html
@@ -25,16 +25,34 @@
     <ul class="list-non-bullet">
         <li>
             <div class="container container-center">
-                <h1>Quiz about React JS</h1>
+                <h1 style="margin-block-end: 8px;">Dolan's Talk</h1>
+                <small>18 Spetember, 2022</small>
+                <p style="margin-bottom: 25px;">A <b>Vanilla JS</b> app which take text in english and give translated text in dolan's lauguage.</p>
+                <a style="margin-right: 15px ;" class="link link-primary" href="https://my-dolan-talk.netlify.app/">Run Project</a>
+                <a class="link link-secondary" href="https://github.com/UnnatiShah07/dolan-speak">Source code</a>
+            </div>            
+        </li><br>
+        <li style="margin-top: 2rem;">
+            <div class="container container-center">
+                <h1 style="margin-block-end: 8px;">Banana Talk</h1>
+                <small>18 Spetember, 2022</small>
+                <p style="margin-bottom: 25px;">A <b>Vanilla JS</b> app which take text in english and give translated text in banana lauguage.</p>
+                <a style="margin-right: 15px ;" class="link link-primary" href="https://my-minion-banana-talk.netlify.app">Run Project</a>
+                <a class="link link-secondary" href="https://github.com/UnnatiShah07/banana-speak">Source code</a>
+            </div>            
+        </li><br>
+        <li style="margin-top: 2rem;">
+            <div class="container container-center">
+                <h1 style="margin-block-end: 8px;">Quiz about React JS</h1>
                 <small>11 Spetember, 2022</small>
                 <p style="margin-bottom: 25px;">A CLI app built with <b>nodeJS</b>. You can send this to your friends and find out who really knows react well.</p>
                 <a style="margin-right: 15px ;" class="link link-primary" href="https://replit.com/@UnnatiShah07/React-Js-Quiz-App">Run Project</a>
                 <a class="link link-secondary" href="https://github.com/UnnatiShah07/react-js-quiz-app">Source code</a>
             </div>            
         </li><br>
-        <li>
+        <li style="margin-top: 2rem;">
             <div class="container container-center">
-                <h1>How well you know me?</h1>
+                <h1 style="margin-block-end: 8px;">How well you know me?</h1>
                 <small>11 Spetember, 2022</small>
                 <p style="margin-bottom: 25px;">A CLI app built with <b>nodeJS</b>. You can send this to your friends and find out who really knows you.</p>
                 <a style="margin-right: 15px ;" class="link link-primary" href="https://replit.com/@UnnatiShah07/Friend-Quiz-App">Run Project</a>
