--- a/readBolg2.html
+++ b/readBolg2.html
@@ -6,8 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Read Blog Two | Unnati Shah</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 </head>
 <body>
+
+    <nav class="navigation container">
+        <div class="nav-brand">Unnati Shah</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-item-inline"><a class="link" href="/index.html">Home</a></li>
+            <li class="list-item-inline"><a class="link" href="/projects.html">Projects</a></li>
+            <li class="list-item-inline"><a class="link link-active" href="/blogs.html">Blogs</a></li>
+        </ul>
+    </nav>
 
     <header class="girl">
         <h1 class="girl-heading">Dummy Blog <span class="heading-inverter">Two</span></h3>
@@ -26,6 +36,24 @@
         <a class="link link-secondary" href="/blogs.html">Go Back</a>
         <div style="margin-bottom: 100px;"></div>
     </div>
+
+    <footer class="footer">
+        <div class="footer-heading">Connect with me</div>
+        <ul class="social-links list-non-bullet">
+            <li class="list-item-inline">
+                <a class="link icon" href="https://github.com/UnnatiShah07"><i class="fa fa-github" aria-hidden="true"></i></a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link icon" href="/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link icon" href="/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            </li>
+            <li class="list-item-inline">
+                <a class="link icon" href="https://instagram.com/unnati0701"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            </li>
+        </ul>
+    </footer>
 
 </body>
 </html>
