Add emoji interpreter and recommendation app in projects

--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,24 @@
     <ul class="list-non-bullet">
         <li>
             <div class="container container-center">
+                <h1 style="margin-block-end: 8px;">Music Recommendation App</h1>
+                <small>25 Spetember, 2022</small>
+                <p style="margin-bottom: 25px;">A <b>React JS</b> app which suggest list of songs by different genres.</p>
+                <a style="margin-right: 15px ;" class="link link-primary" href="https://479exz.csb.app/">Run Project</a>
+                <a class="link link-secondary" href="https://github.com/UnnatiShah07/music-recommendation">Source code</a>
+            </div>            
+        </li><br>
+        <li>
+            <div class="container container-center">
+                <h1 style="margin-block-end: 8px;">Emoji Interpreter</h1>
+                <small>25 Spetember, 2022</small>
+                <p style="margin-bottom: 25px;">A <b>React JS</b> app using which you can know the name of an emoji by entering emoji in input or by clicking on emoji.</p>
+                <a style="margin-right: 15px ;" class="link link-primary" href="https://ikwude.csb.app/">Run Project</a>
+                <a class="link link-secondary" href="https://github.com/UnnatiShah07/emoji-interpreter">Source code</a>
+            </div>            
+        </li><br>
+        <li>
+            <div class="container container-center">
                 <h1 style="margin-block-end: 8px;">Dolan's Talk</h1>
                 <small>18 Spetember, 2022</small>
                 <p style="margin-bottom: 25px;">A <b>Vanilla JS</b> app which take text in english and give translated text in dolan's lauguage.</p>
