--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,51 @@
     <ul class="list-non-bullet">
         <li>
             <div class="container container-center">
+                <h1 style="margin-block-end: 8px;">Profit or loss calculator</h1>
+                <small>01 October, 2022</small>
+                <p style="margin-bottom: 25px;">A <b>Vanilla JS</b> app which checks your current status of stock.</p>
+                <a style="margin-right: 15px ;" class="link link-primary" href="https://my-stocks-profit-loss-app.netlify.app/">Run Project</a>
+                <a class="link link-secondary" href="https://github.com/UnnatiShah07/profit-or-loss">Source code</a>
+            </div>            
+        </li><br>
+        <li>
+            <div class="container container-center">
+                <h1 style="margin-block-end: 8px;">Palindrome Birthday</h1>
+                <small>29 Spetember, 2022</small>
+                <p style="margin-bottom: 25px;">A <b>Vanilla JS</b> app which checks is your birthday palindrome or not.</p>
+                <a style="margin-right: 15px ;" class="link link-primary" href="https://my-palindrome-birthday-app.netlify.app/">Run Project</a>
+                <a class="link link-secondary" href="https://github.com/UnnatiShah07/palindrome-birthday">Source code</a>
+            </div>            
+        </li><br>
+        <li>
+            <div class="container container-center">
+                <h1 style="margin-block-end: 8px;">Do you know triangles?</h1>
+                <small>28 Spetember, 2022</small>
+                <p style="margin-bottom: 25px;">A <b>Vanilla JS</b> app which helps you to know triangle better.</p>
+                <a style="margin-right: 15px ;" class="link link-primary" href="https://my-fun-with-triangle.netlify.app/">Run Project</a>
+                <a class="link link-secondary" href="https://github.com/UnnatiShah07/fun-with-triangles">Source code</a>
+            </div>            
+        </li><br>
+        <li>
+            <div class="container container-center">
+                <h1 style="margin-block-end: 8px;">Is your Birthday Lucky?</h1>
+                <small>27 Spetember, 2022</small>
+                <p style="margin-bottom: 25px;">A <b>Vanilla JS</b> app which takes your birth date and tell is it lucky or not.</p>
+                <a style="margin-right: 15px ;" class="link link-primary" href="https://is-my-birthday-lucky-11.netlify.app/">Run Project</a>
+                <a class="link link-secondary" href="https://github.com/UnnatiShah07/lucky-birthday">Source code</a>
+            </div>            
+        </li><br>
+        <li>
+            <div class="container container-center">
+                <h1 style="margin-block-end: 8px;">Cash Register Manager</h1>
+                <small>26 Spetember, 2022</small>
+                <p style="margin-bottom: 25px;">A <b>Vanilla JS</b> app which make easy cash exchange.</p>
+                <a style="margin-right: 15px ;" class="link link-primary" href="https://cash-register-to-make-easy-exchange.netlify.app/">Run Project</a>
+                <a class="link link-secondary" href="https://github.com/UnnatiShah07/cash-register">Source code</a>
+            </div>            
+        </li><br>
+        <li>
+            <div class="container container-center">
                 <h1 style="margin-block-end: 8px;">Music Recommendation App</h1>
                 <small>25 Spetember, 2022</small>
                 <p style="margin-bottom: 25px;">A <b>React JS</b> app which suggest list of songs by different genres.</p>
