Add linked in and twitter links

--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                 <a class="link icon" href="https://github.com/UnnatiShah07"><i class="fa fa-github" aria-hidden="true"></i></a>
             </li>
             <li class="list-item-inline">
-                <a class="link icon" href="/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                <a class="link icon" href="https://www.linkedin.com/in/unnati-shah-5801b2252/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
             </li>
             <li class="list-item-inline">
-                <a class="link icon" href="/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a class="link icon" href="https://twitter.com/UnnatiS72065630"><i class="fa fa-twitter" aria-hidden="true"></i></a>
             </li>
             <li class="list-item-inline">
                 <a class="link icon" href="https://instagram.com/unnati0701"><i class="fa fa-instagram" aria-hidden="true"></i></a>
