Add target in link

--- a/projects.html
+++ b/projects.html
@@ -25,101 +25,101 @@
     <ul class="list-non-bullet">
         <li>
             <div class="container container-center">
-                <h1 style="margin-block-end: 8px;">Profit or loss calculator</h1>
+                <h1 style="margin-block-end: 8px;">Profit or loss calculator (mark14)</h1>
                 <small>01 October, 2022</small>
                 <p style="margin-bottom: 25px;">A <b>Vanilla JS</b> app which checks your current status of stock.</p>
-                <a style="margin-right: 15px ;" class="link link-primary" href="https://my-stocks-profit-loss-app.netlify.app/">Run Project</a>
-                <a class="link link-secondary" href="https://github.com/UnnatiShah07/profit-or-loss">Source code</a>
+                <a style="margin-right: 15px ;" target="_blank" class="link link-primary" href="https://my-stocks-profit-loss-app.netlify.app/">Run Project</a>
+                <a class="link link-secondary" target="_blank" href="https://github.com/UnnatiShah07/profit-or-loss">Source code</a>
             </div>            
         </li><br>
         <li>
             <div class="container container-center">
-                <h1 style="margin-block-end: 8px;">Palindrome Birthday</h1>
+                <h1 style="margin-block-end: 8px;">Palindrome Birthday (mark13)</h1>
                 <small>29 Spetember, 2022</small>
                 <p style="margin-bottom: 25px;">A <b>Vanilla JS</b> app which checks is your birthday palindrome or not.</p>
-                <a style="margin-right: 15px ;" class="link link-primary" href="https://my-palindrome-birthday-app.netlify.app/">Run Project</a>
-                <a class="link link-secondary" href="https://github.com/UnnatiShah07/palindrome-birthday">Source code</a>
+                <a style="margin-right: 15px ;" target="_blank" class="link link-primary" href="https://my-palindrome-birthday-app.netlify.app/">Run Project</a>
+                <a class="link link-secondary" target="_blank" href="https://github.com/UnnatiShah07/palindrome-birthday">Source code</a>
             </div>            
         </li><br>
         <li>
             <div class="container container-center">
-                <h1 style="margin-block-end: 8px;">Do you know triangles?</h1>
+                <h1 style="margin-block-end: 8px;">Do you know triangles? (mark12)</h1>
                 <small>28 Spetember, 2022</small>
                 <p style="margin-bottom: 25px;">A <b>Vanilla JS</b> app which helps you to know triangle better.</p>
-                <a style="margin-right: 15px ;" class="link link-primary" href="https://my-fun-with-triangle.netlify.app/">Run Project</a>
-                <a class="link link-secondary" href="https://github.com/UnnatiShah07/fun-with-triangles">Source code</a>
+                <a style="margin-right: 15px ;" target="_blank" class="link link-primary" href="https://my-fun-with-triangle.netlify.app/">Run Project</a>
+                <a class="link link-secondary" target="_blank" href="https://github.com/UnnatiShah07/fun-with-triangles">Source code</a>
             </div>            
         </li><br>
         <li>
             <div class="container container-center">
-                <h1 style="margin-block-end: 8px;">Is your Birthday Lucky?</h1>
+                <h1 style="margin-block-end: 8px;">Is your Birthday Lucky? (mark11)</h1>
                 <small>27 Spetember, 2022</small>
                 <p style="margin-bottom: 25px;">A <b>Vanilla JS</b> app which takes your birth date and tell is it lucky or not.</p>
-                <a style="margin-right: 15px ;" class="link link-primary" href="https://is-my-birthday-lucky-11.netlify.app/">Run Project</a>
-                <a class="link link-secondary" href="https://github.com/UnnatiShah07/lucky-birthday">Source code</a>
+                <a style="margin-right: 15px ;" target="_blank" class="link link-primary" href="https://is-my-birthday-lucky-11.netlify.app/">Run Project</a>
+                <a class="link link-secondary" target="_blank" href="https://github.com/UnnatiShah07/lucky-birthday">Source code</a>
             </div>            
         </li><br>
         <li>
             <div class="container container-center">
-                <h1 style="margin-block-end: 8px;">Cash Register Manager</h1>
+                <h1 style="margin-block-end: 8px;">Cash Register Manager (mark10)</h1>
                 <small>26 Spetember, 2022</small>
                 <p style="margin-bottom: 25px;">A <b>Vanilla JS</b> app which make easy cash exchange.</p>
-                <a style="margin-right: 15px ;" class="link link-primary" href="https://cash-register-to-make-easy-exchange.netlify.app/">Run Project</a>
-                <a class="link link-secondary" href="https://github.com/UnnatiShah07/cash-register">Source code</a>
+                <a style="margin-right: 15px ;" target="_blank" class="link link-primary" href="https://cash-register-to-make-easy-exchange.netlify.app/">Run Project</a>
+                <a class="link link-secondary" target="_blank" href="https://github.com/UnnatiShah07/cash-register">Source code</a>
             </div>            
         </li><br>
         <li>
             <div class="container container-center">
-                <h1 style="margin-block-end: 8px;">Music Recommendation App</h1>
+                <h1 style="margin-block-end: 8px;">Music Recommendation App (mark9)</h1>
                 <small>25 Spetember, 2022</small>
                 <p style="margin-bottom: 25px;">A <b>React JS</b> app which suggest list of songs by different genres.</p>
-                <a style="margin-right: 15px ;" class="link link-primary" href="https://479exz.csb.app/">Run Project</a>
-                <a class="link link-secondary" href="https://github.com/UnnatiShah07/music-recommendation">Source code</a>
+                <a style="margin-right: 15px ;" target="_blank" class="link link-primary" href="https://479exz.csb.app/">Run Project</a>
+                <a class="link link-secondary" target="_blank" href="https://github.com/UnnatiShah07/music-recommendation">Source code</a>
             </div>            
         </li><br>
         <li>
             <div class="container container-center">
-                <h1 style="margin-block-end: 8px;">Emoji Interpreter</h1>
+                <h1 style="margin-block-end: 8px;">Emoji Interpreter (mark8)</h1>
                 <small>25 Spetember, 2022</small>
                 <p style="margin-bottom: 25px;">A <b>React JS</b> app using which you can know the name of an emoji by entering emoji in input or by clicking on emoji.</p>
-                <a style="margin-right: 15px ;" class="link link-primary" href="https://ikwude.csb.app/">Run Project</a>
-                <a class="link link-secondary" href="https://github.com/UnnatiShah07/emoji-interpreter">Source code</a>
+                <a style="margin-right: 15px ;" target="_blank" class="link link-primary" href="https://ikwude.csb.app/">Run Project</a>
+                <a class="link link-secondary" target="_blank" href="https://github.com/UnnatiShah07/emoji-interpreter">Source code</a>
             </div>            
         </li><br>
         <li>
             <div class="container container-center">
-                <h1 style="margin-block-end: 8px;">Dolan's Talk</h1>
+                <h1 style="margin-block-end: 8px;">Dolan's Talk (mark7)</h1>
                 <small>18 Spetember, 2022</small>
                 <p style="margin-bottom: 25px;">A <b>Vanilla JS</b> app which take text in english and give translated text in dolan's lauguage.</p>
-                <a style="margin-right: 15px ;" class="link link-primary" href="https://my-dolan-talk.netlify.app/">Run Project</a>
-                <a class="link link-secondary" href="https://github.com/UnnatiShah07/dolan-speak">Source code</a>
+                <a style="margin-right: 15px ;" target="_blank" class="link link-primary" href="https://my-dolan-talk.netlify.app/">Run Project</a>
+                <a class="link link-secondary" target="_blank" href="https://github.com/UnnatiShah07/dolan-speak">Source code</a>
             </div>            
         </li><br>
         <li style="margin-top: 2rem;">
             <div class="container container-center">
-                <h1 style="margin-block-end: 8px;">Banana Talk</h1>
+                <h1 style="margin-block-end: 8px;">Banana Talk (mark6)</h1>
                 <small>18 Spetember, 2022</small>
                 <p style="margin-bottom: 25px;">A <b>Vanilla JS</b> app which take text in english and give translated text in banana lauguage.</p>
-                <a style="margin-right: 15px ;" class="link link-primary" href="https://my-minion-banana-talk.netlify.app">Run Project</a>
-                <a class="link link-secondary" href="https://github.com/UnnatiShah07/banana-speak">Source code</a>
+                <a style="margin-right: 15px ;" target="_blank" class="link link-primary" href="https://my-minion-banana-talk.netlify.app">Run Project</a>
+                <a class="link link-secondary" target="_blank" href="https://github.com/UnnatiShah07/banana-speak">Source code</a>
             </div>            
         </li><br>
         <li style="margin-top: 2rem;">
             <div class="container container-center">
-                <h1 style="margin-block-end: 8px;">Quiz about React JS</h1>
+                <h1 style="margin-block-end: 8px;">Quiz about React JS (mark2)</h1>
                 <small>11 Spetember, 2022</small>
                 <p style="margin-bottom: 25px;">A CLI app built with <b>nodeJS</b>. You can send this to your friends and find out who really knows react well.</p>
-                <a style="margin-right: 15px ;" class="link link-primary" href="https://replit.com/@UnnatiShah07/React-Js-Quiz-App">Run Project</a>
-                <a class="link link-secondary" href="https://github.com/UnnatiShah07/react-js-quiz-app">Source code</a>
+                <a style="margin-right: 15px ;" target="_blank" class="link link-primary" href="https://replit.com/@UnnatiShah07/React-Js-Quiz-App">Run Project</a>
+                <a class="link link-secondary" target="_blank" href="https://github.com/UnnatiShah07/react-js-quiz-app">Source code</a>
             </div>            
         </li><br>
         <li style="margin-top: 2rem;">
             <div class="container container-center">
-                <h1 style="margin-block-end: 8px;">How well you know me?</h1>
+                <h1 style="margin-block-end: 8px;">How well you know me? (mark1)</h1>
                 <small>11 Spetember, 2022</small>
                 <p style="margin-bottom: 25px;">A CLI app built with <b>nodeJS</b>. You can send this to your friends and find out who really knows you.</p>
-                <a style="margin-right: 15px ;" class="link link-primary" href="https://replit.com/@UnnatiShah07/Friend-Quiz-App">Run Project</a>
-                <a class="link link-secondary" href="https://github.com/UnnatiShah07/friend-quiz-app">Source code</a>
+                <a style="margin-right: 15px ;" target="_blank" class="link link-primary" href="https://replit.com/@UnnatiShah07/Friend-Quiz-App">Run Project</a>
+                <a class="link link-secondary" target="_blank" href="https://github.com/UnnatiShah07/friend-quiz-app">Source code</a>
             </div>            
         </li><br>
     </ul>
